--- a/Snake/Snake/Snake.csproj
+++ b/Snake/Snake/Snake.csproj
@@ -46,12 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\Pixel.cs" />
+    <Compile Include="Controllers\Snake.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Snake.cs">
+    <Compile Include="Views\Snake.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Snake.Designer.cs">
+    <Compile Include="Views\Snake.Designer.cs">
       <DependentUpon>Snake.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -63,7 +65,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Snake.resx">
+    <EmbeddedResource Include="Views\Snake.resx">
       <DependentUpon>Snake.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
