Meat controller & meat eat.

--- a/Snake/Snake/Snake.csproj
+++ b/Snake/Snake/Snake.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\MeatController.cs" />
     <Compile Include="Models\Pixel.cs" />
     <Compile Include="Controllers\SnakeController.cs" />
     <Compile Include="Program.cs" />
