Cambios para entregar al monguer
Antoñito es un ser inferior

--- a/Snake/Snake/Snake.csproj
+++ b/Snake/Snake/Snake.csproj
@@ -79,6 +79,7 @@
     <EmbeddedResource Include="Views\Snake.resx">
       <DependentUpon>Snake.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
