--- a/Snake/Snake/Snake.csproj
+++ b/Snake/Snake/Snake.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ChallengeController.cs" />
+    <Compile Include="Controllers\IGameController.cs" />
     <Compile Include="Controllers\MeatController.cs" />
     <Compile Include="Models\Pixel.cs" />
     <Compile Include="Controllers\SnakeController.cs" />
@@ -105,6 +107,9 @@
     </Content>
     <Content Include="Media\trololo.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\Levels.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
