--- a/Snake/Snake/Snake.csproj
+++ b/Snake/Snake/Snake.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Controllers\MeatController.cs" />
     <Compile Include="Controllers\TrainingController.cs" />
     <Compile Include="Controllers\VSAController.cs" />
+    <Compile Include="Controllers\VSBController.cs" />
     <Compile Include="Models\Pixel.cs" />
     <Compile Include="Controllers\SnakeController.cs" />
     <Compile Include="Program.cs" />
